// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / CollapsibleCard Collapsed initially 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  overflow: hidden;
  will-change: height;
  height: 0px;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c8[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 1;
}

.c7 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c9 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={false}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            Collapsed initially
          </h2>
        </div>
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c6 c7"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              transform="rotate(-180 12 12)"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c8"
    height="0px"
    hidden={true}
    onTransitionEnd={[Function]}
  >
    <p
      className="c9 c10"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Collapsible With Custom Full Width Title 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c10 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c10[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c9 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c5 {
  width: 100%;
}

.c11 {
  margin: 0;
}

@media (min-width:760px) {
  .c6 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 c5"
        >
          <h2
            className="c6"
          >
            <div
              className="c7"
            >
              <div
                className="c4"
              >
                Custom title
              </div>
              <div
                className="c4"
              >
                Status
              </div>
            </div>
          </h2>
        </div>
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c8 c9"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              transform="rotate(-180 12 12)"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c10"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c11 c12"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Collapsible card with lots of top and bottom padding 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c8[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 40px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c7 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c9 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            Collapsible card with lots of top and bottom padding
          </h2>
        </div>
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c6 c7"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              transform="rotate(-180 12 12)"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c8"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c9 c10"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Collapsible card with no title row padding 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c8[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 0px 0px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c7 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c9 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            Collapsible card with no title row padding
          </h2>
        </div>
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c6 c7"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              transform="rotate(-180 12 12)"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c8"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c9 c10"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Collapsible with custom component as title 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c8[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c7 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c9 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            Custom title
          </h2>
        </div>
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c6 c7"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              transform="rotate(-180 12 12)"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c8"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c9 c10"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Collapsible with custom expand element 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c7[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c8 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            Custom expand element (ReactNode)
          </h2>
        </div>
        <div
          className="c4"
        >
          <span
            className="c6"
          >
            Toggle expand
          </span>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c7"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c8 c9"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Collapsible with custom expand element as a function 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c7[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c8 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            Custom expand element (function)
          </h2>
        </div>
        <div
          className="c4"
        >
          <span
            className="c6"
          >
            Close
          </span>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c7"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c8 c9"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Collapsible with onClick listener 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c8[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c7 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c9 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            I've been clicked 0 times
          </h2>
        </div>
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c6 c7"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              transform="rotate(-180 12 12)"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c8"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c9 c10"
    >
      On mobile the onClick event should fire for onTouchStart and not onClick.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Collapsible without indicator 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c8[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c7 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c9 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            Collapsible without indicator
          </h2>
        </div>
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c6 c7"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              transform="rotate(-180 12 12)"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c8"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c9 c10"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard Default 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c3 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c8[hidden] {
  display: none;
}

.c2 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 20px;
  border: 0;
}

.c2::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c7 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c9 {
  margin: 0;
}

@media (min-width:760px) {
  .c5 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2"
      onClick={[Function]}
      type="button"
    >
      <div
        className="c3"
      >
        <div
          className="c4 "
        >
          <h2
            className="c5"
          >
            Collapsible
          </h2>
        </div>
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c6 c7"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              transform="rotate(-180 12 12)"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
  <div
    className="c8"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c9 c10"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules / CollapsibleCard With an action component that doesn't trigger collapse 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c5 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c12 {
  color: #282823;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: sub;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c13 {
  overflow: hidden;
  will-change: height;
  height: auto;
  -webkit-transition: height 0.16s ease-out;
  transition: height 0.16s ease-out;
}

.c13[hidden] {
  display: none;
}

.c4 {
  touch-action: none;
  position: relative;
  background: none;
  cursor: pointer;
  display: block;
  width: 100%;
  padding: 20px 10px 20px 20px;
  border: 0;
}

.c4::before {
  content: '';
  display: block;
  background: #336BFF;
  width: 2px;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -webkit-transition: opacity 0.16s ease-out;
  transition: opacity 0.16s ease-out;
  opacity: 0;
}

.c3 {
  padding-right: 20px;
}

.c9 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

.c14 {
  margin: 0;
}

@media (min-width:760px) {
  .c7 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      <button
        aria-expanded={true}
        className="c4"
        onClick={[Function]}
        type="button"
      >
        <div
          className="c5"
        >
          <div
            className="c6 "
          >
            <h2
              className="c7"
            >
              Collapsible
            </h2>
          </div>
          <div
            className="c6"
          >
            <svg
              aria-hidden="true"
              className="c8 c9"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                transform="rotate(-180 12 12)"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        className="NormalizedButton__Button-sc-ey7f5x-0 c10"
        onClick={[Function]}
        type="button"
      >
        <span
          className="c11"
        >
          <svg
            aria-hidden="true"
            className="c12"
            focusable="false"
            height={24}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={24}
          >
            <path
              clipRule="evenodd"
              d="M10.444 3.134A3.992 3.992 0 018.5 5.938a3.992 3.992 0 01-3.4.283 8.99 8.99 0 00-1.556 2.692A3.992 3.992 0 015 12a3.992 3.992 0 01-1.457 3.087c.361.99.892 1.899 1.557 2.692a3.992 3.992 0 013.4.283 3.992 3.992 0 011.944 2.804 9.069 9.069 0 003.11 0 3.992 3.992 0 011.945-2.804 3.992 3.992 0 013.4-.283 8.988 8.988 0 001.557-2.692A3.992 3.992 0 0119 12c0-1.244.568-2.354 1.456-3.087A8.989 8.989 0 0018.9 6.22a3.992 3.992 0 01-3.4-.283 3.992 3.992 0 01-1.945-2.804 9.064 9.064 0 00-3.11 0zM9.246 1.348A11.018 11.018 0 0112 1c.949 0 1.871.12 2.752.347l.792.204-.043.817a2 2 0 003.088 1.784l.685-.444.572.582a10.989 10.989 0 012.756 4.77l.218.786-.727.37a2 2 0 000 3.567l.727.371-.218.787a10.989 10.989 0 01-2.756 4.769l-.572.582-.685-.444a2 2 0 00-3.088 1.784l.043.816-.792.204C13.872 22.88 12.95 23 12 23c-.95 0-1.873-.12-2.754-.348l-.791-.204.042-.816a2 2 0 00-3.087-1.784l-.685.443-.572-.582a10.99 10.99 0 01-2.756-4.768l-.217-.787.727-.37a2 2 0 000-3.567l-.727-.371.217-.787A10.99 10.99 0 014.153 4.29l.572-.581.685.443a2 2 0 003.087-1.784l-.042-.816.791-.204z"
              fill="currentColor"
              fillRule="evenodd"
            />
            <path
              clipRule="evenodd"
              d="M12 10a2 2 0 100 4 2 2 0 000-4zm-4 2a4 4 0 118 0 4 4 0 01-8 0z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c13"
    height={null}
    hidden={false}
    onTransitionEnd={[Function]}
  >
    <p
      className="c14 c15"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </div>
</div>
`;
